--- a/templates/reg.html
+++ b/templates/reg.html
@@ -31,6 +31,15 @@
     </div>
     {% endfor %}
     </p>
+    <p>
+        {{ form.password_again.label }}<br>
+        {{ form.password(class="form-control", type="password") }}<br>
+        {% for error in form.password_again.errors %}
+    <div class="alert alert-danger" role="alert">
+        {{ error }}
+    </div>
+    {% endfor %}
+    </p>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
 </form>
 {% endblock %}
