--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 {% extends "Menu_Top.html" %}
 
 {% block content %}
-<h1>Главная страница</h1>
+<h1 align="CENTER">Главная страница</h1>
 <body>
     {% for item in Task %}
-        <a><b>{{item["title"]}}</b></a> <a>{{item["AC"]}}</a>
+        <a href="/problem/{{item['id']}}"><b>{{item["title"]}}</b></a> <a>{{item["AC"]}}</a>
     {% endfor %}
 </body>
 {% endblock %}
