--- a/templates/Menu_Top.html
+++ b/templates/Menu_Top.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <header>
-    <h3>Свой Тимус</h3>
-    <a href="/login">Своя страница</a>   <a href="/send">Страница отправки</a>   <a href="/main">Главная страница</a>
+    <h3 align="CENTER">Свой Тимус</h3>
+    <a href="/login" link="BLACK">Своя страница</a>   <a href="/send">Страница отправки</a>   <a href="/main">Главная страница</a> <a href="/reg">Регистрация</a>
 </header>
 <!-- Begin page content -->
 <main role="main" class="container">
