--- a/templates/reg.html
+++ b/templates/reg.html
@@ -3,7 +3,6 @@
 {% block content %}
 <h1>Регистрация</h1>
 <form action="" method="post" novalidate>
-    {{ form.hidden_tag() }}
     <p>
         {{ form.name.label }}<br>
         {{ form.name(class="form-control") }}<br>
@@ -33,7 +32,7 @@
     </p>
     <p>
         {{ form.password_again.label }}<br>
-        {{ form.password(class="form-control", type="password") }}<br>
+        {{ form.password_again(class="form-control", type="password") }}<br>
         {% for error in form.password_again.errors %}
     <div class="alert alert-danger" role="alert">
         {{ error }}
