--- a/templates/reg.html
+++ b/templates/reg.html
@@ -4,13 +4,8 @@
 <h1>Регистрация</h1>
 <form action="" method="post" novalidate>
     <p>
-        {{ form.name.label }}<br>
-        {{ form.name(class="form-control") }}<br>
-        {% for error in form.name.errors %}
-    <div class="alert alert-danger" role="alert">
-        {{ error }}
-    </div>
-    {% endfor %}
+        {{ form.email.label }}<br>
+        {{ form.email(class="form-control")}}<br>
     </p>
     <p>
         {{ form.username.label }}<br>
