--- a/templates/reg.html
+++ b/templates/reg.html
@@ -3,6 +3,8 @@
 {% block content %}
 <h1>Регистрация</h1>
 <form action="" method="post" novalidate>
+    {{ form.hidden_tag() }}
+    {{ form.csrf_token }}
     <p>
         {{ form.email.label }}<br>
         {{ form.email(class="form-control")}}<br>
