--- a/templates/log.html
+++ b/templates/log.html
@@ -4,6 +4,7 @@
 <h1>Авторизация</h1>
 <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
+    {{ form.csrf_token }}
     <p>
         {{ form.username.label }}<br>
         {{ form.username(class="form-control") }}<br>
