--- a/templates/reg.html
+++ b/templates/reg.html
@@ -8,6 +8,11 @@
     <p>
         {{ form.email.label }}<br>
         {{ form.email(class="form-control")}}<br>
+        {% for error in form.email.errors %}
+        <div class="alert alert-danger" role="alert">
+        {{ error }}
+    </div>
+    {% endfor %}
     </p>
     <p>
         {{ form.username.label }}<br>
