--- a/templates/log.html
+++ b/templates/log.html
@@ -3,6 +3,11 @@
 {% block content %}
 <h1>Авторизация</h1>
 <form action="" method="post" novalidate>
+    {% if error %}
+     <div class="alert alert-danger">
+        {{ error }}
+     </div>
+  {% endif %}
     {{ form.hidden_tag() }}
     {{ form.csrf_token }}
     <p>
