--- a/templates/Menu_Top.html
+++ b/templates/Menu_Top.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <h3 align="CENTER">Свой Тимус</h3>
-    <a href="/login" link="BLACK">Своя страница</a>   <a href="/send">Страница отправки</a>   <a href="/reg">Регистрация</a>
+    <a href="/login" link="BLACK">Своя страница</a>   <a href="/send">Страница отправки</a> <a href="/index">Главная страница</a>   <a href="/reg">Регистрация</a>
 </header>
 <!-- Begin page content -->
 <main role="main" class="container">
